force-app/main/default/objects/FeeRecords__c/FeeRecords__c.object-meta.xml
<CustomObject>
    <label>FeeRecords</label>
    <nameField>
        <displayFormat>FeeRecords-{0}</displayFormat>
        <label>FeeRecords Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FeeRecordss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>