force-app/main/default/objects/FeeRecords__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>FeeRecordss</relationshipLabel>
    <relationshipName>FeeRecordss</relationshipName>
    <type>Lookup</type>
</CustomField>