force-app/main/default/objects/FeeRecords__c/fields/PayAmount__c.field-meta.xml
<CustomField>
    <fullName>PayAmount__c</fullName>
    <label>PayAmount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>