force-app/main/default/objects/FeeRecords__c/fields/PayDate__c.field-meta.xml
<CustomField>
    <fullName>PayDate__c</fullName>
    <label>PayDate</label>
    <type>Date</type>
</CustomField>