force-app/main/default/objects/FeeRecords__c/validationRules/FeeRecord_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>FeeRecord_rules</fullName>
    <active>true</active>
    <errorConditionFormula>PayAmount__c &gt;  Course__r.Fees__c</errorConditionFormula>
    <errorDisplayField>PayAmount__c</errorDisplayField>
    <errorMessage>PayAmount should not be execeed from Selected Course&apos;s Fees.</errorMessage>
</ValidationRule>