force-app/main/default/objects/FeeRecords__c/validationRules/FeeRecord_rules2.validationRule-meta.xml
<ValidationRule>
    <fullName>FeeRecord_rules2</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(PayDate__c  =  TODAY(),PayDate__c = TODAY() - 1 , PayDate__c = TODAY() + 1 ))</errorConditionFormula>
    <errorDisplayField>PayDate__c</errorDisplayField>
    <errorMessage>PayDate should today,tomorrow and yesterday.</errorMessage>
</ValidationRule>