force-app/main/default/objects/FeeRecords__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Course__c</columns>
    <columns>PayAmount__c</columns>
    <columns>PayDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>